--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name _;
-
+    server_name localhost;
+    
     root /usr/share/nginx/html;
     index index.html;
 
@@ -10,7 +10,7 @@ server {
     gzip_vary on;
     gzip_min_length 10240;
     gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml application/xml application/javascript text/javascript application/json image/svg+xml;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/javascript;
     gzip_disable "MSIE [1-6]\.";
 
     # Security headers
@@ -18,28 +18,23 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
-    # Cache static assets with a cache-busting hash in filename
-    location ~* \.(?:css|js|mjs|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+    # Cache static files
+    location /static/ {
         expires 1y;
-        add_header Cache-Control "public, immutable";
-        try_files $uri =404;
+        add_header Cache-Control "public, no-transform";
     }
 
-    # Special route for overlay entry (built by Vite at src/overlay/index.html)
-    location = /overlay {
-        try_files /overlay /overlay/index.html /overlay.html /index.html =404;
-    }
-
-    # SPA fallback for all other routes
+    # Handle React routing
     location / {
         try_files $uri $uri/ /index.html;
-
+        
+        # Security headers for main application
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data: https:" always;
+        add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data: https:;" always;
     }
 
-    # Deny access to hidden files
+    # Deny access to . files
     location ~ /\. {
         deny all;
     }
-}
+} 
